project: refactored sidebar(navbar)

--- a/public/project/client/views/favorites/favorite.view.html
+++ b/public/project/client/views/favorites/favorite.view.html
@@ -1,13 +1,6 @@
 <div class="row">
     <!--side bar-->
-    <div class="col-md-2">
-        <ul class="nav nav-pills nav-stacked hidden-xs hidden-sm">
-            <li role="presentation"><a href="#/profile">Profile</a></li>
-            <li role="presentation"  class="active"><a href="#/favorite">Favorite Doctors</a></li>
-            <li role="presentation"><a href="#/review">My Reviews</a></li>
-            <li role="presentation"><a href="#/message">My Messages</a></li>
-        </ul>
-    </div>
+    <div ng-include src="'views/navbar/navbar.view.html'"></div>
     <!--page content-->
     <div class="col-md-10">
         <div class="row">
