--- a/public/project/client/views/reviews/review.view.html
+++ b/public/project/client/views/reviews/review.view.html
@@ -1,12 +1,6 @@
 <div class="row">
-    <div class="col-md-2 hidden-xs hidden-sm">
-        <ul class="nav nav-pills nav-stacked">
-            <li role="presentation"><a href="#/profile">Profile</a></li>
-            <li ng-if="currentUser.role == 'Patient'" role="presentation"><a href="#/favorite">Favorite Doctors</a></li>
-            <li role="presentation" class="active"><a href="#/review">My Reviews</a></li>
-            <li ng-if="currentUser.role == 'Patient'" role="presentation"><a href="#/message">My Messages</a></li>
-        </ul>
-    </div>
+    <!--sidebar-->
+    <div ng-include src="'views/navbar/navbar.view.html'"></div>
     <div class="col-md-8 ">
     <div class="row reviewCard" ng-repeat="review in model.reviews">
         <div class="col-md-3">
