--- a/public/project/client/views/users/profile.view.html
+++ b/public/project/client/views/users/profile.view.html
@@ -1,12 +1,5 @@
 <div class="row">
-    <div class="col-md-2">
-        <ul class="nav nav-pills nav-stacked hidden-xs hidden-sm">
-            <li role="presentation" class="active"><a href="#/profile">Profile</a></li>
-            <li ng-if="currentUser.role == 'Patient'" role="presentation"><a href="#/favorite">Favorite Doctors</a></li>
-            <li role="presentation"><a href="#/review">My Reviews</a></li>
-            <li ng-if="currentUser.role == 'Patient'" role="presentation"><a href="#/message">My Messages</a></li>
-        </ul>
-    </div>
+    <div ng-include src="'views/navbar/navbar.view.html'"></div>
     <div class="col-md-6">
         <div><h2>Profile</h2></div>
         <hr>
