--- a/public/project/client/views/main/home.view.html
+++ b/public/project/client/views/main/home.view.html
@@ -3,8 +3,15 @@
         <p class="col-md-8 col-md-offset-3 font-awesome-sass">Keep calm </p>
         <p class="col-md-8 col-md-offset-3 font-awesome-sass">And find a doctor. </p>
     </div>
+    <div class="col-sm-12 col-sm-push-6 hidden-xs hidden-md hidden-lg  homeSloganMobile">
+        Keep calm and Find a doctor
+    </div>
+    <div class="col-xs-12 col-xs-push-6 hidden-sm hidden-md  hidden-lg homeSloganMobile">
+        Find a doctor
+    </div>
     <!--show for large and middle size screen-->
-    <div class="searchGroup row  visible-lg visible-md">
+    <div class="searchGroup col-md-12">
+        <div class=" row visible-lg visible-md">
         <div class="col-md-4 col-md-push-1 form-group">
             <label for="specialty">I'm looking for a:</label>
             <select ng-model="doctor.specialty" class="form-control input-xlg" id="specialty">
@@ -46,6 +53,7 @@
             <label>&nbsp</label>
             <a ng-click="main.search(doctor.specialty, doctor.location)" class="btn btn-success btn-block btn-xlg">Search</a>
         </div>
+    </div>
     </div>
     <!--show for small and x-small size screen-->
     <div class="searchGroupSmall row  visible-sm visible-xs">
