--- a/public/project/client/views/users/register.view.html
+++ b/public/project/client/views/users/register.view.html
@@ -2,22 +2,20 @@
 <hr>
 <div class="col-md-6">
     <div class="form-group">
-        <label for="email">Email:</label>
-        <input ng-model="newuser.email" class="form-control" type="text" id="email" placeholder="Emial">
-    </div>
-    <div class="form-group">
         <label for="username">Username:</label>
         <input ng-model="newuser.username" class="form-control" type="text" id="username" placeholder="username">
     </div>
+    <div class="alert alert-danger" role="alert" ng-show="model.registerFailed">Username already exists.</div>
     <div class="form-group">
         <label for="password">Create a password:</label>
         <input ng-model="newuser.password" class="form-control" type="password" id="password" placeholder="password">
     </div>
+    <div class="alert alert-danger" role="alert" ng-show="model.pwdMatchFailed">Passwords don't match.</div>
     <div class="form-group">
         <label for="confirmPassword">Confirm your password:</label>
-        <input class="form-control" type="password" id="confirmPassword" placeholder="password">
+        <input ng-model="confirmPassword" class="form-control" type="password" id="confirmPassword" placeholder="password">
     </div>
     <div>
-        <button ng-click="model.register(newuser)" class="btn btn-primary btn-block">Join</button>
+        <button ng-click="model.register(newuser, confirmPassword)" class="btn btn-primary btn-block">Join</button>
     </div>
 </div>
