project: refactored search result view

--- a/public/project/client/views/header/header.view.html
+++ b/public/project/client/views/header/header.view.html
@@ -15,7 +15,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li ng-hide="currentUser">
-                    <a href="#/login">Login</a>
+                    <a href="" ng-click="model.login()">Login</a>
                 </li>
                 <li ng-hide="currentUser">
                     <a href="#/register">Join</a>
