--- a/public/project/client/views/searchBar/searchBar.view.html
+++ b/public/project/client/views/searchBar/searchBar.view.html
@@ -1,5 +1,5 @@
 <div>
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default navbar-static-top">
         <div  class="container-fluid">
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
