--- a/public/project/client/views/search/detail.view.html
+++ b/public/project/client/views/search/detail.view.html
@@ -16,8 +16,9 @@
         </div>
         <div class="col-md-2 col-sm-6">
             <br><!--bad practice-->
-            <button class="btn btn-default btn-block" role="button" ng-click="model.rate()" ng-show="currentUser.role == 'Patient'">Rate</button>
-            <button ng-click="model.addFavorite()" class="btn btn-success btn-block" ng-show="currentUser.role == 'Patient'"><span class="glyphicon glyphicon-star-empty"></span> Like</button>
+            <button class="btn btn-default btn-block" role="button" ng-click="model.rate()" ng-hide="currentUser.role == 'Provider'">Rate</button>
+            <button ng-click="model.addFavorite()" class="btn btn-success btn-block" ng-show="!model.isFavorited && (currentUser.role == 'Patient'|| !currentUser.role)"><span class="glyphicon glyphicon-star-empty"></span> Like</button>
+            <button ng-click="model.unfavorite()" class="btn btn-success btn-block" ng-show="model.isFavorited && (currentUser.role == 'Patient'|| !currentUser.role)"><span class="glyphicon glyphicon-star"></span> Unlike</button>
         </div>
     </div>
 </div>
