--- a/public/assignment/client/views/admin/admin.view.html
+++ b/public/assignment/client/views/admin/admin.view.html
@@ -5,12 +5,12 @@
     <table class="table table-striped">
         <thead>
             <tr>
-                <th><span class="glyphicon glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Username</th>
-                <th><span class="glyphicon glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Password</th>
-                <th><span class="glyphicon glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>First Name</th>
-                <th><span class="glyphicon glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Last Name</th>
-                <th><span class="glyphicon glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Roles</th>
-                <th><span class="glyphicon glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Actions</th>
+                <th ng-click="model.sortBy('username')"><span ng-show="model.predicate === 'username'" ng-class="model.triangle" aria-hidden="true"></span>Username</th>
+                <th>Password</th>
+                <th ng-click="model.sortBy('firstName')"><span ng-show="model.predicate === 'firstName'" ng-class="model.triangle" aria-hidden="true"></span>First Name</th>
+                <th ng-click="model.sortBy('lastName')"><span  ng-show="model.predicate === 'lastName'" ng-class="model.triangle" aria-hidden="true"></span>Last Name</th>
+                <th>Roles</th>
+                <th>Actions</th>
             </tr>
             <tr>
                 <th>
@@ -40,7 +40,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="user in model.users">
+            <tr ng-repeat="user in model.users | orderBy:model.predicate:model.reverse">
                 <td>{{user.username}}</td>
                 <td>&nbsp;</td>
                 <td>{{user.firstName}}</td>
