--- a/public/project/client/views/rate/rate.view.html
+++ b/public/project/client/views/rate/rate.view.html
@@ -1,6 +1,5 @@
-<h2>Rate Doctor</h2>
-<div class="row">
-    <div class="col-md-6 col-md-offset-2">
+<div class="row editReviewHeader">
+    <div class="col-md-6 col-md-push-3 col-sm-6 col-sm-push-3">
         <div class="col-sm-3"><img class="img-circle" ng-src="{{model.doctor.profile.image_url}}"></div>
         <div class="col-sm-9">
             <ul class="list-unstyled">
@@ -17,7 +16,7 @@
 <hr>
 <div ng-show="model.submitSuccuss" class="alert alert-success" role="alert"><p align="center">Rate Success!</p></div>
 <div class="row">
-    <div class="col-md-5 col-md-offset-1">
+    <div class="col-md-4 col-md-push-3">
         <div class="form-group">
             <label for="overallRating">Overall Rating:</label>
             <jk-rating-stars id="overallRating" max-rating="5" rating="rate.overall" read-only="false">
@@ -34,7 +33,9 @@
             </jk-rating-stars>
         </div>
     </div>
-    <div class="col-md-5 ">
+</div>
+<div class="row">
+    <div class="col-md-5 col-md-push-3">
         <div class="form-group">
             <label for="comments">Comments:</label>
             <textarea ng-model="rate.comments" class="form-control" rows="8" id="comments"></textarea>
@@ -42,10 +43,10 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-3 col-md-offset-3">
+    <div class="col-md-2 col-md-offset-3">
         <a ng-click="model.submit(rate)" class="btn btn-success btn-block" role="button">Submit</a>
     </div>
-    <div class="col-md-3 ">
+    <div class="col-md-2">
         <a ng-click="model.cancel(rate)" class="btn btn-warning btn-block" role="button">Cancel</a>
     </div>
 </div>
